tests/paczka1/fuzzy1/23569010.err
Error in line 1: JLG9mz3oM S390 13,3
Error in line 8: S416 S263 62,1
Error in line 10: tadT S416 59,4
Error in line 13: tadT S670 60,3
Error in line 23: A6fU S390 45,5
Error in line 14: JLG9mz3oM S263 177,0
Error in line 21: tadT S416 77,1
Error in line 33: JLG9mz3oM S390 37,3
